test(analytics): complete driver comparison and filtering coverage